<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/tiitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiitleEditText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText">

        <RadioButton
            android:id="@+id/radioButtonOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/once" />

        <RadioButton
            android:id="@+id/radioButtonRecurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/recurring" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/recurringOptionsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup">

        <TextView
            android:id="@+id/chooseDaysText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_days" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:layout_marginTop="8dp"
            android:useDefaultMargins="true">

            <CheckBox
                android:id="@+id/checkboxSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

            <CheckBox
                android:id="@+id/checkboxMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/checkboxTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/checkboxWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/checkboxThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"/>

            <CheckBox
                android:id="@+id/checkboxFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>

            <CheckBox
                android:id="@+id/checkboxSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>

        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/dateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recurringOptionsLayout" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>