<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:background="#FF101010">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FF101010"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Изменение элемента"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Название"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Name"
                android:textColorHint="#AAAAAA"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

            <TextView
                android:id="@+id/descriptionLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Описание"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="Описание"
                android:textColorHint="#AAAAAA"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabelTextView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/colorItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/colorLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Цвет"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/colorItem"
                app:layout_constraintStart_toEndOf="@+id/colorItem"
                app:layout_constraintTop_toTopOf="@+id/colorItem" />

            <LinearLayout
                android:id="@+id/dateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorItem">

                <TextView
                    android:id="@+id/dateLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Дата/дни"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionEditText">

                    <RadioButton
                        android:id="@+id/radioButtonOnce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:checked="true"
                        android:text="@string/once"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButtonRecurring"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:text="@string/recurring"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </RadioGroup>

                <TextView
                    android:visibility="visible"
                    android:id="@+id/startDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1 января 2021"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:id="@+id/recurringOptionsLayout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rowCount="1"
                        android:layout_marginTop="8dp"
                        android:useDefaultMargins="true">

                        <CheckBox
                            android:id="@+id/checkboxSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/sunday" />

                        <CheckBox
                            android:id="@+id/checkboxMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/monday" />

                        <CheckBox
                            android:id="@+id/checkboxTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/tuesday" />

                        <CheckBox
                            android:id="@+id/checkboxWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/wednesday" />

                        <CheckBox
                            android:id="@+id/checkboxThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/thursday"/>

                        <CheckBox
                            android:id="@+id/checkboxFriday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/friday"/>

                        <CheckBox
                            android:id="@+id/checkboxSaturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/saturday"/>

                    </GridLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateLinearLayout">

                <TextView
                    android:id="@+id/timeLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Время начала"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/startTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="12 : 00"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/buttonLinearLayout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/cancel_item_btn" />

                <ImageView
                    android:id="@+id/editButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/edit_item_btn" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
